# rust-docs-mcp-server

./: CHANGELOG.md  Cargo.toml  README.md
src/: embeddings.rs  main.rs  server.rs  services.rs  voyage_client.rs
